test/fail_compilation/fail3144.d

void main()
{
    int i = 1;
    switch (i)
       default: {} break;

}
